--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="utf-8">
     <title>Pixel creative</title>
     <link href="./build/css/mixin.css" rel="stylesheet" media="all">
-    <!-- from Bitbucket -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PRMB2CNHP8"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-PRMB2CNHP8');
+    </script>
 </head>
 <body>
     <section>
